<resources>
    <string name="app_name">Vongola</string>
    <string name="description_btn_add">Add new Order</string>
    <string name="text_container">text</string>
    <string name="order_num">76</string>
    <string name="waiter">John Doe</string>
    <string name="description_btn_expand">Expand specific content</string>
    <string name="btn_text">Click Me!</string>
    <string name="btn_started_text">Get Started</string>
    <string name="description_welcome_pic">The welcome picture</string>
    <string name="searchbar_hint">Search Order</string>
    <string name="description_icon">Icon of the application</string>
    <string name="lbl_order_num">Order Num</string>
    <string name="lbl_waiter">Waiter Name</string>
    <string name="lbl_price">Total</string>
    <string name="price">260.00</string>
    <string name="lbl_products">Products</string>
    <string name="lbl_discount">Discount</string>
    <string name="txt_num">12</string>
    <string name="lbl_service_charge">Service Charge</string>
    <string name="lbl_taxes">Taxes</string>
    <string name="lbl_sub_total">Sub-Total</string>
    <string name="lbl_total">Total</string>
    <string name="lbl_product_price">Price</string>
    <string name="lbl_product_name">Product Name</string>
    <string name="lbl_product_quantity">Quantity</string>
    <string name="product_price">28.00</string>
    <string name="product_name">Burger</string>
    <string name="product_quantity">10</string>
    <string name="lbl_create_new_order">Create new Order</string>
    <string name="lbl_charges">Charges</string>
    <string name="lbl_service">Service</string>
    <string name="lbl_product">Product</string>
    <string name="btn_add_quantity">Add quantity</string>
    <string name="btn_remove_quantity">Remove Quantity</string>
    <string name="lbl_name">Name</string>
    <string name="description_remove_product_from_product_list">Remove product from product list</string>
    <string name="add_product">Add Product</string>
    <string name="description_next_page">Next Page</string>
    <string name="description_previous_page">Previous Page</string>
    <string name="lbl_required">*Required</string>
</resources>