<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.WelcomeActivity">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:contentDescription="@string/description_icon"
        android:src="@mipmap/ic_icon" />

    <ImageView
        android:id="@+id/welcome_pic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icon"
        android:layout_centerVertical="true"
        android:layout_marginTop="26dp"
        android:contentDescription="@string/description_welcome_pic"
        android:src="@drawable/nz_home_food_small" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_pic"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/ballet"
        android:text="@string/app_name"
        android:textSize="60sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/startedButton"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:paddingHorizontal="90dp"
        android:paddingVertical="16dp"
        android:text="@string/btn_started_text" />

</RelativeLayout>