<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginVertical="5dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp">


        <TextView
            android:id="@+id/product_name"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/product_name" />

        <TextView
            android:id="@+id/product_quantity"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text="@string/product_quantity" />

        <TextView
            android:id="@+id/product_price"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text="@string/product_price" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>