<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_parent"
    style="@style/Widget.Material3.CardView.Elevated"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/product_name_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        style="@style/product_card_lbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_name" />

                    <TextView
                        android:id="@+id/product_name"
                        style="@style/product_card_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_name" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/product_name_error"
                style="@style/error_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/product_quantity_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        style="@style/product_card_lbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_product_quantity" />

                    <TextView
                        android:id="@+id/product_quantity"
                        style="@style/product_card_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_quantity" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/product_quantity_error"
                style="@style/error_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/product_price_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        style="@style/product_card_lbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_product_price" />

                    <TextView
                        android:id="@+id/product_price"
                        style="@style/product_card_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_price" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/product_price_error"
                style="@style/error_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/remove_product"
            style="@style/Widget.Material3.Button.IconButton.Outlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/description_remove_product_from_product_list"
            app:backgroundTint="@color/md_theme_errorContainer"
            app:icon="@drawable/ic_remove_icon" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>