<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/search_view_bg"
        android:paddingVertical="5dp"
        app:iconifiedByDefault="false"
        app:queryBackground="@drawable/clear_edit_view"
        app:queryHint="@string/searchbar_hint" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pagination_button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_below="@+id/search_view">

        <TextView
            android:id="@+id/page_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="16dp"
            android:text="@string/txt_num"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next_page"
            style="@style/btn_pagination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/description_next_page"
            app:icon="@drawable/ic_chevron_right"
            app:layout_constraintBottom_toBottomOf="@+id/page_number"
            app:layout_constraintStart_toEndOf="@+id/page_number"
            app:layout_constraintTop_toTopOf="@+id/page_number" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_previous_page"
            style="@style/btn_pagination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/description_previous_page"
            app:icon="@drawable/ic_chevron_left"
            app:layout_constraintBottom_toBottomOf="@+id/page_number"
            app:layout_constraintEnd_toStartOf="@+id/page_number"
            app:layout_constraintTop_toTopOf="@+id/page_number" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshOrdersLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pagination_button_container">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/orderListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="30dp"
        android:contentDescription="@string/description_btn_add"
        android:src="@drawable/ic_add_icon">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />
</RelativeLayout>