<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".view.CreateOrderActivity">

    <TextView
        android:id="@+id/lbl_create"
        style="@style/create_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/lbl_create_new_order" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/lbl_create">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/create_order_container"
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lbl_create"
            app:cardCornerRadius="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_waiter_container"
                    style="@style/name_input_box"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/lbl_waiter">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_waiter"
                        style="@style/name_input_box.input_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.card.MaterialCardView
                    style="@style/create_card_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/product_title"
                            style="@style/create_sub_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lbl_product" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/input_product_name_container"
                            style="@style/name_input_box"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/product_title">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/input_product_name"
                                style="@style/name_input_box.input_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/lbl_product_name" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <LinearLayout
                            android:id="@+id/price_and_quantity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/input_product_name_container"
                            android:layout_marginTop="10dp"
                            android:baselineAligned="false">

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/input_product_price_container"
                                style="@style/inputTextBox"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/input_product_price"
                                    style="@style/inputTextBox.input_text"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/lbl_product_price"
                                    android:inputType="numberDecimal" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/remove_btn"
                                style="@style/Widget.Material3.Button.IconButton.Outlined"
                                android:layout_width="48dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="10dp"
                                android:layout_marginBottom="5dp"
                                android:contentDescription="@string/btn_remove_quantity"
                                app:icon="@drawable/ic_remove_icon" />

                            <TextView
                                android:id="@+id/product_quantity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="5dp"
                                android:layout_marginBottom="5dp"
                                android:text="@string/product_quantity" />

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/add_btn"
                                style="@style/Widget.Material3.Button.IconButton.Outlined"
                                android:layout_width="48dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="5dp"
                                android:layout_marginBottom="5dp"
                                android:contentDescription="@string/btn_add_quantity"
                                app:icon="@drawable/ic_add_icon" />

                        </LinearLayout>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/add_product_btn"
                            style="@style/Widget.Material3.Button.TonalButton"
                            android:layout_width="250dp"
                            android:layout_height="55dp"
                            android:layout_below="@+id/price_and_quantity"
                            android:layout_alignParentEnd="true"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="9dp"
                            android:layout_marginEnd="63dp"
                            android:text="@string/add_product" />

                    </RelativeLayout>

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    style="@style/create_sub_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_products" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/create_product_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <com.google.android.material.card.MaterialCardView
                    style="@style/create_card_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            style="@style/create_sub_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lbl_charges" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:baselineAligned="false"
                            android:orientation="horizontal">

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/input_discount_container"
                                style="@style/inputTextBox"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/input_discount"
                                    style="@style/inputTextBox.input_text"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/lbl_discount"
                                    android:inputType="number" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/input_service_container"
                                style="@style/inputTextBox"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_weight="1">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/input_service"
                                    style="@style/inputTextBox.input_text"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/lbl_service"
                                    android:inputType="number" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/input_tax_container"
                                style="@style/inputTextBox"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_weight="1">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/input_tax"
                                    style="@style/inputTextBox.input_text"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/lbl_taxes"
                                    android:inputType="number" />

                            </com.google.android.material.textfield.TextInputLayout>

                        </LinearLayout>

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/create_order_btn"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="300dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/lbl_create_new_order" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.core.widget.NestedScrollView>

    <!--    When creating a new content will show this till success or fail if success go back else stay and toast-->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>